fix(Preview): Don't set negative z-index for preview content

--- a/src/Playroom/Preview.less
+++ b/src/Playroom/Preview.less
@@ -1,4 +1,3 @@
 .container {
   position: relative;
-  z-index: -1;
 }
